--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="We proudly present Prowess, a Fitness, Workout & Gym React Template, If you are a fitness expert you would like to build a superb website for your gym or a fitness center, BodyShape is your best choice.">
-  <meta property="og:title" content="BodyShape - React Fitness, Workout & Gym Template">
+    content="Since 2014, I've transformed my life through fitness, turning challenges into strength and passion into a career.">
+  <meta property="og:title" content="DC training and fitness - Website">
   <meta property="og:description"
-    content="We proudly present Prowess, a Fitness, Workout & Gym React Template, If you are a fitness expert you would like to build a superb website for your gym or a fitness center, BodyShape is your best choice.">
-  <meta property="og:image" content="https://bodyshape.dexignzone.com/react/social-image.png">
+    content="Since 2014, I've transformed my life through fitness, turning challenges into strength and passion into a career.">
+  <meta property="og:image" content="https://dc-training-and-fitness.vercel.app/">
   <meta name="format-detection" content="telephone=no">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -25,7 +25,7 @@
     href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-  <title>BodyShape - React Fitness, Workout & Gym Template</title>
+  <title>DC training and fitness - Website</title>
 </head>
 
 <body id="bg" data-theme-color="color_1">
